:bug: fixed, horizontal scrolling removed

--- a/projects/Monticello/src/scss/_common.scss
+++ b/projects/Monticello/src/scss/_common.scss
@@ -47,18 +47,6 @@ textarea {
     }
 }
 
-/*uikit*/
-address, dl, fieldset, figure, ol, p, pre, ul {
-    margin: 0;
-}
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-}
-h1 {
-    margin-block-start: 0;
-    margin-block-end: 0;
-}
-
 .container {
     max-width: 1200px;
     padding: 0 15px;
@@ -113,4 +101,19 @@ h1 {
             border-color: $text-color--date;
         }
     }
+}
+
+/*uikit*/
+address, dl, fieldset, figure, ol, p, pre, ul {
+    margin: 0;
+}
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+h1 {
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+button {
+    margin-bottom: 0;
 }
